Adding navbar and hero section

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,8 +2,10 @@
 
 @import './scss/reset';
 @import './scss/general';
-@import './scss/responsive';
+@import './scss/layout';
+@import './scss/mixins';
 
 @import './scss/colors';
 @import './scss/fonts';
 @import './scss/spacing';
+@import './scss/borders';
