--- a/src/assets/styles/scss/_colors.scss
+++ b/src/assets/styles/scss/_colors.scss
@@ -4,4 +4,6 @@ $green: #06D6A0;
 $green-dark: #2A9D8F;
 $green-heavy: #2A4747;
 $gray: #EAE8FF;
+$gray-dark: #999999;
 $white: #FFFFFF;
+$black: #000000;
