--- a/src/assets/styles/scss/_general.scss
+++ b/src/assets/styles/scss/_general.scss
@@ -1,6 +1,25 @@
 @import './fonts';
 @import './colors';
 
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: $lato;
+}
+
 h1,
 h2,
 h3,
@@ -11,6 +30,11 @@ h6 {
     font-weight: 700;
 }
 
-body {
-    font-family: $lato;
+a {
+    text-decoration: none;
+}
+
+img {
+    display: block;
+    width: 100%;
 }
