--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -148,6 +148,7 @@ html {
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   font-family: "Lato", sans-serif;
 }
 
@@ -481,6 +482,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
@@ -501,10 +505,17 @@ img {
   max-width: 576px;
 }
 
-.container .content h1 {
-  font-size: 2.8rem;
+.container .content .title {
   color: #2A4747;
   margin-bottom: 16px;
+}
+
+.container .content h1 {
+  font-size: 2.8rem;
+}
+
+.container .content h2 {
+  font-size: 2rem;
 }
 
 .container .content p {
