--- a/src/assets/styles/scss/_layout.scss
+++ b/src/assets/styles/scss/_layout.scss
@@ -1,8 +1,4 @@
-@import './fonts';
-@import './colors';
-@import './mixins';
-@import './spacing';
-@import './borders';
+// Base styles
 
 .container {
     display: flex;
@@ -81,22 +77,99 @@
                     content: "";
                     display: block;
                     position: absolute;
-                    top: 0;
-                    left: 0;
+                    top: -1px;
+                    left: -2px;
                     width: 0%;
-                    height: 100%;
+                    height: 103%;
                     z-index: -1;
                     background: $green-dark;
-                    border-radius: $border-r-1;
+                    border-radius: $border-r-2;
                     transition: 0.7s ease-in-out;
                 }
 
                 &:hover {
                     color: $white;
+
                     &::after {
-                        width: 100%;
+                        width: 101%;
                     }
                 }
+            }
+        }
+    }
+}
+
+// Home view
+
+.home {
+    max-width: $container-xl;
+    margin: 0 auto;
+    position: relative;
+}
+
+.circle {
+    img {
+        top: -10%;
+        right: -15%;
+        position: absolute;
+        max-width: 1000px;
+        z-index: -1;
+
+        @include responsive(xl) {
+            top: -7%;
+            right: -13%;
+        }
+    }
+}
+
+// Hero section
+
+#hero {
+    .container {
+        justify-content: space-between;
+    }
+}
+
+// About us section
+
+#about-us {
+    .container {
+        justify-content: space-evenly;
+
+        .content {
+            max-width: 450px;
+            position: relative;
+
+            p {
+                margin-bottom: 0;
+            }
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                opacity: 1;
+                top: -20px;
+                left: -20px;
+                width: 10%;
+                height: 30%;
+                border-top: 3px solid $green;
+                border-left: 3px solid $green;
+                border-radius: 2px;
+            }
+
+            &::before {
+                content: "";
+                display: block;
+                position: absolute;
+                opacity: 1;
+                bottom: -20px;
+                right: -5px;
+                width: 10%;
+                height: 30%;
+                border-bottom: 3px solid $green;
+                border-right: 3px solid $green;
+                border-radius: 2px;
             }
         }
     }
