--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,6 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 html,
 body,
 div,
@@ -471,6 +469,82 @@ img {
   padding-bottom: 128px;
 }
 
+header {
+  width: 100%;
+  margin-top: 5vh;
+}
+
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+.navbar .logo {
+  font-size: 2rem;
+  max-width: 90px;
+  color: #000000;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+
+.navbar .logo span {
+  color: #06D6A0;
+}
+
+.navbar .nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navbar .nav-menu .nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar .nav-menu .nav-list li {
+  margin-right: 64px;
+}
+
+.navbar .nav-menu .nav-list li .nav-link {
+  color: #FFFFFF;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.navbar .nav-menu .nav-list li .nav-link:hover {
+  color: #2A4747;
+}
+
+.navbar .nav-menu .signin .btn-signin {
+  background: #06D6A0;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #FFFFFF;
+  padding: 8px 32px;
+  border-radius: 10px;
+  -webkit-transition: 0.7s ease-in-out;
+  transition: 0.7s ease-in-out;
+}
+
+.navbar .nav-menu .signin .btn-signin:hover {
+  background: #2A4747;
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -587,13 +661,13 @@ img {
   content: "";
   display: block;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -1px;
+  left: -2px;
   width: 0%;
-  height: 100%;
+  height: 103%;
   z-index: -1;
   background: #2A9D8F;
-  border-radius: 5px;
+  border-radius: 10px;
   -webkit-transition: 0.7s ease-in-out;
   transition: 0.7s ease-in-out;
 }
@@ -603,306 +677,76 @@ img {
 }
 
 .container .content .cta-group .btn-secondary:hover::after {
-  width: 100%;
+  width: 101%;
 }
 
-.m-1 {
-  margin: 8px;
+.home {
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative;
 }
 
-.m-2 {
-  margin: 16px;
+.circle img {
+  top: -10%;
+  right: -15%;
+  position: absolute;
+  max-width: 1000px;
+  z-index: -1;
 }
 
-.m-3 {
-  margin: 32px;
+@media screen and (min-width: 1440px) {
+  .circle img {
+    top: -7%;
+    right: -13%;
+  }
 }
 
-.m-4 {
-  margin: 64px;
+#hero .container {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.m-5 {
-  margin: 128px;
+#about-us .container {
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.mt-1 {
-  margin-top: 8px;
+#about-us .container .content {
+  max-width: 450px;
+  position: relative;
 }
 
-.mt-2 {
-  margin-top: 16px;
+#about-us .container .content p {
+  margin-bottom: 0;
 }
 
-.mt-3 {
-  margin-top: 32px;
+#about-us .container .content::after {
+  content: "";
+  display: block;
+  position: absolute;
+  opacity: 1;
+  top: -20px;
+  left: -20px;
+  width: 10%;
+  height: 30%;
+  border-top: 3px solid #06D6A0;
+  border-left: 3px solid #06D6A0;
+  border-radius: 2px;
 }
 
-.mt-4 {
-  margin-top: 64px;
-}
-
-.mt-5 {
-  margin-top: 128px;
-}
-
-.mr-1 {
-  margin-right: 8px;
-}
-
-.mr-2 {
-  margin-right: 16px;
-}
-
-.mr-3 {
-  margin-right: 32px;
-}
-
-.mr-4 {
-  margin-right: 64px;
-}
-
-.mr-5 {
-  margin-right: 128px;
-}
-
-.mb-1 {
-  margin-bottom: 8px;
-}
-
-.mb-2 {
-  margin-bottom: 16px;
-}
-
-.mb-3 {
-  margin-bottom: 32px;
-}
-
-.mb-4 {
-  margin-bottom: 64px;
-}
-
-.mb-5 {
-  margin-bottom: 128px;
-}
-
-.ml-1 {
-  margin-left: 8px;
-}
-
-.ml-2 {
-  margin-left: 16px;
-}
-
-.ml-3 {
-  margin-left: 32px;
-}
-
-.ml-4 {
-  margin-left: 64px;
-}
-
-.ml-5 {
-  margin-left: 128px;
-}
-
-.mx-1 {
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-.mx-2 {
-  margin-left: 16px;
-  margin-right: 16px;
-}
-
-.mx-3 {
-  margin-left: 32px;
-  margin-right: 32px;
-}
-
-.mx-4 {
-  margin-left: 64px;
-  margin-right: 64px;
-}
-
-.mx-5 {
-  margin-left: 128px;
-  margin-right: 128px;
-}
-
-.my-1 {
-  margin-top: 8px;
-  margin-bottom: 8px;
-}
-
-.my-2 {
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-
-.my-3 {
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
-
-.my-4 {
-  margin-top: 64px;
-  margin-bottom: 64px;
-}
-
-.my-5 {
-  margin-top: 128px;
-  margin-bottom: 128px;
-}
-
-.p-1 {
-  padding: 8px;
-}
-
-.p-2 {
-  padding: 16px;
-}
-
-.p-3 {
-  padding: 32px;
-}
-
-.p-4 {
-  padding: 64px;
-}
-
-.p-5 {
-  padding: 128px;
-}
-
-.pt-1 {
-  padding-top: 8px;
-}
-
-.pt-2 {
-  padding-top: 16px;
-}
-
-.pt-3 {
-  padding-top: 32px;
-}
-
-.pt-4 {
-  padding-top: 64px;
-}
-
-.pt-5 {
-  padding-top: 128px;
-}
-
-.pr-1 {
-  padding-right: 8px;
-}
-
-.pr-2 {
-  padding-right: 16px;
-}
-
-.pr-3 {
-  padding-right: 32px;
-}
-
-.pr-4 {
-  padding-right: 64px;
-}
-
-.pr-5 {
-  padding-right: 128px;
-}
-
-.pb-1 {
-  padding-bottom: 8px;
-}
-
-.pb-2 {
-  padding-bottom: 16px;
-}
-
-.pb-3 {
-  padding-bottom: 32px;
-}
-
-.pb-4 {
-  padding-bottom: 64px;
-}
-
-.pb-5 {
-  padding-bottom: 128px;
-}
-
-.pl-1 {
-  padding-left: 8px;
-}
-
-.pl-2 {
-  padding-left: 16px;
-}
-
-.pl-3 {
-  padding-left: 32px;
-}
-
-.pl-4 {
-  padding-left: 64px;
-}
-
-.pl-5 {
-  padding-left: 128px;
-}
-
-.px-1 {
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-.px-2 {
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-.px-3 {
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-.px-4 {
-  padding-left: 64px;
-  padding-right: 64px;
-}
-
-.px-5 {
-  padding-left: 128px;
-  padding-right: 128px;
-}
-
-.py-1 {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-.py-2 {
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-.py-3 {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.py-4 {
-  padding-top: 64px;
-  padding-bottom: 64px;
-}
-
-.py-5 {
-  padding-top: 128px;
-  padding-bottom: 128px;
+#about-us .container .content::before {
+  content: "";
+  display: block;
+  position: absolute;
+  opacity: 1;
+  bottom: -20px;
+  right: -5px;
+  width: 10%;
+  height: 30%;
+  border-bottom: 3px solid #06D6A0;
+  border-right: 3px solid #06D6A0;
+  border-radius: 2px;
 }
 /*# sourceMappingURL=style.css.map */
