--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,11 +1,12 @@
 // THEME IMPORTS
 
 @import './scss/reset';
-@import './scss/general';
-@import './scss/layout';
 @import './scss/mixins';
 
-@import './scss/colors';
 @import './scss/fonts';
-@import './scss/spacing';
+@import './scss/colors';
+@import './scss/general';
 @import './scss/borders';
+@import './scss/spacing';
+@import './scss/navbar';
+@import './scss/layout';
