--- a/src/assets/styles/scss/_layout.scss
+++ b/src/assets/styles/scss/_layout.scss
@@ -34,67 +34,67 @@
             color: $gray-dark;
             margin-bottom: $gap-3;
         }
+    }
 
-        .cta-group {
+    .cta-group {
+        display: flex;
+        flex-direction: row;
+
+        .btn-secondary {
             display: flex;
-            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 0.7rem 1.8rem;
+            position: relative;
+            border-radius: $border-r-2;
+            background: transparent;
+            border: 2px solid $green;
+            color: $green;
+            margin-right: $gap-2;
+            font-size: 1.2rem;
+            min-width: 180px;
+            transition: 0.7s ease-in-out;
 
-            .btn-primary {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 0.7rem 1.8rem;
-                position: relative;
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                top: -1px;
+                left: -2px;
+                width: 0%;
+                height: 103%;
+                z-index: -1;
+                background: $green-dark;
                 border-radius: $border-r-2;
-                background: $green;
-                color: $white;
-                margin-right: $gap-2;
-                font-size: 1.2rem;
-                min-width: 180px;
                 transition: 0.7s ease-in-out;
-
-                &:hover {
-                    background: $green-dark;
-                }
             }
 
-            .btn-secondary {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 0.7rem 1.8rem;
-                position: relative;
-                border-radius: $border-r-2;
-                background: transparent;
-                border: 2px solid $green;
-                color: $green;
-                margin-right: $gap-2;
-                font-size: 1.2rem;
-                min-width: 180px;
-                transition: 0.7s ease-in-out;
+            &:hover {
+                color: $white;
 
                 &::after {
-                    content: "";
-                    display: block;
-                    position: absolute;
-                    top: -1px;
-                    left: -2px;
-                    width: 0%;
-                    height: 103%;
-                    z-index: -1;
-                    background: $green-dark;
-                    border-radius: $border-r-2;
-                    transition: 0.7s ease-in-out;
-                }
-
-                &:hover {
-                    color: $white;
-
-                    &::after {
-                        width: 101%;
-                    }
+                    width: 101%;
                 }
             }
+        }
+    }
+
+    .btn-primary {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0.7rem 1.8rem;
+        position: relative;
+        border-radius: $border-r-2;
+        background: $green;
+        color: $white;
+        margin-right: $gap-2;
+        font-size: 1.2rem;
+        min-width: 180px;
+        transition: 0.7s ease-in-out;
+
+        &:hover {
+            background: $green-dark;
         }
     }
 }
@@ -171,6 +171,105 @@
                 border-right: 3px solid $green;
                 border-radius: 2px;
             }
+        }
+    }
+}
+
+#our-services,
+#prices {
+    .container {
+        flex-direction: column;
+        padding: 5rem 1rem;
+
+        .heading {
+            h2 {
+                font-size: 2rem;
+                color: $green-heavy;
+                margin-bottom: $gap-4;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    margin: 0 auto;
+                    bottom: -50%;
+                    left: 0;
+                    right: 0;
+                    width: 50px;
+                    border-bottom: 3px solid $green;
+                    height: 10px;
+                }
+            }
+        }
+
+        .cards-grid,
+        .cards-prices {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            column-gap: $gap-4;
+
+            .card {
+                max-width: 350px;
+                padding: 2rem;
+                border-radius: $border-r-4;
+                box-shadow: -4px 4px 25px rgba(6, 214, 160, 0.25);
+
+                img {
+                    max-width: 100px;
+                    margin: 0 auto;
+                    margin-bottom: $gap-3;
+
+                    &.performance,
+                    &.seo {
+                        max-width: 66px !important;
+                    }
+                }
+
+                h3 {
+                    font-size: 1.3rem;
+                    margin-bottom: $gap-2;
+                    color: $green;
+                }
+            }
+        }
+    }
+}
+
+#prices {
+    .cards-prices {
+        width: 88%;
+
+        .card {
+            width: 100%;
+            justify-self: center;
+
+            &:nth-child(2) {
+                background: $green;
+            }
+        }
+    }
+
+    h3 {
+        color: $black !important;
+        text-align: center;
+        font-size: 1.5rem !important;
+    }
+
+    h4 {
+        color: $green;
+        font-weight: bold;
+        font-size: 1.8rem;
+        width: 100%;
+        text-align: center;
+        margin-bottom: $gap-2;
+    }
+
+    ul {
+        margin: $gap-3 0;
+
+        li {
+            margin-bottom: $gap-2;
+            color: $gray-dark;
         }
     }
 }
