--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -471,7 +471,6 @@ img {
 
 header {
   width: 100%;
-  margin-top: 5vh;
 }
 
 .navbar {
@@ -486,7 +485,7 @@ header {
           align-items: center;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 5vh 3vw;
 }
 
 .navbar .logo {
@@ -562,40 +561,7 @@ header {
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 1rem;
-}
-
-.container .content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  max-width: 576px;
-}
-
-.container .content .title {
-  color: #2A4747;
-  margin-bottom: 16px;
-}
-
-.container .content h1 {
-  font-size: 2.8rem;
-}
-
-.container .content h2 {
-  font-size: 2rem;
-}
-
-.container .content p {
-  font-size: 1rem;
-  color: #999999;
-  margin-bottom: 32px;
+  padding: 0 3vw;
 }
 
 .container .cta-group {
@@ -629,6 +595,10 @@ header {
   min-width: 180px;
   -webkit-transition: 0.7s ease-in-out;
   transition: 0.7s ease-in-out;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: -4px 4px 25px rgba(6, 214, 160, 0.15);
+          box-shadow: -4px 4px 25px rgba(6, 214, 160, 0.15);
 }
 
 .container .cta-group .btn-secondary::after {
@@ -651,7 +621,7 @@ header {
 }
 
 .container .cta-group .btn-secondary:hover::after {
-  width: 101%;
+  width: 102%;
 }
 
 .container .btn-primary {
@@ -674,6 +644,8 @@ header {
   min-width: 180px;
   -webkit-transition: 0.7s ease-in-out;
   transition: 0.7s ease-in-out;
+  -webkit-box-shadow: -4px 4px 20px rgba(42, 157, 143, 0.25);
+          box-shadow: -4px 4px 20px rgba(42, 157, 143, 0.25);
 }
 
 .container .btn-primary:hover {
@@ -706,6 +678,47 @@ header {
   background: #2A9D8F;
 }
 
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  max-width: 576px;
+}
+
+.content .title {
+  color: #2A4747;
+  margin-bottom: 16px;
+}
+
+.content h1 {
+  font-size: 2.8rem;
+}
+
+.content h2 {
+  font-size: 2rem;
+}
+
+.content p {
+  font-size: 1rem;
+  color: #999999;
+  margin-bottom: 32px;
+}
+
+.row {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
 .home {
   max-width: 1440px;
   margin: 0 auto;
@@ -713,8 +726,8 @@ header {
 }
 
 .circle img {
-  top: -10%;
-  right: -15%;
+  top: -20vh;
+  right: -17vw;
   position: absolute;
   max-width: 1000px;
   z-index: -1;
@@ -786,29 +799,6 @@ header {
   padding: 5rem 1rem;
 }
 
-#our-services .container .heading h2,
-#prices .container .heading h2,
-#testimonials .container .heading h2 {
-  font-size: 2rem;
-  color: #2A4747;
-  margin-bottom: 64px;
-  position: relative;
-}
-
-#our-services .container .heading h2::before,
-#prices .container .heading h2::before,
-#testimonials .container .heading h2::before {
-  content: "";
-  position: absolute;
-  margin: 0 auto;
-  bottom: -50%;
-  left: 0;
-  right: 0;
-  width: 50px;
-  border-bottom: 3px solid #06D6A0;
-  height: 10px;
-}
-
 #our-services .container .cards-grid,
 #our-services .container .cards-prices,
 #prices .container .cards-grid,
@@ -872,6 +862,25 @@ header {
   color: #06D6A0;
 }
 
+.heading h2 {
+  font-size: 2rem;
+  color: #2A4747;
+  margin-bottom: 64px;
+  position: relative;
+}
+
+.heading h2::before {
+  content: "";
+  position: absolute;
+  margin: 0 auto;
+  bottom: -50%;
+  left: 0;
+  right: 0;
+  width: 50px;
+  border-bottom: 3px solid #06D6A0;
+  height: 10px;
+}
+
 #prices .cards-prices {
   width: 88%;
 }
@@ -922,8 +931,12 @@ header {
   color: #999999;
 }
 
+#testimonials .container {
+  padding: 5rem 0 0;
+}
+
 .swiper-container {
-  padding: 1rem;
+  padding: 1rem 1rem 2rem;
 }
 
 .swiper-container .swiper-slide {
