--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -9,4 +9,5 @@
 @import './scss/borders';
 @import './scss/spacing';
 @import './scss/navbar';
+@import './scss/carousel';
 @import './scss/layout';
