--- a/src/assets/styles/scss/_layout.scss
+++ b/src/assets/styles/scss/_layout.scss
@@ -245,6 +245,7 @@
 .heading {
     h2 {
         font-size: 2rem;
+        text-align: center;
         color: $green-heavy;
         margin-bottom: $gap-4;
         position: relative;
@@ -322,29 +323,10 @@
 }
 
 .swiper-container {
-    padding: 1rem 1rem 2rem;
+    padding: 1rem 2rem 2rem;
 
     .swiper-slide {
         display: flex;
         justify-content: center;
-    }
-}
-
-.swiper {
-    .card {
-        box-shadow: -4px 4px 25px rgba(6, 214, 160, 0.25);
-        border-radius: $border-r-3;
-        padding: 2rem;
-        max-width: 350px;
-
-        img {
-            max-width: 100px;
-            margin: 0 auto;
-        }
-
-        h3 {
-            margin-top: $gap-2;
-            margin-bottom: $gap-2;
-        }
     }
 }
